--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -351,10 +351,16 @@ jobs:
             cd backend
             npm install
             npm run build
+            echo "-----Current Working Directory-----"
+            pwd 
             cd ..
+            echo "-----Current Working Directory after cd ..-----"
+            pwd 
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
             cd .circleci/ansible
+            echo "-----Current Working Directory after cd .circleci/ansible-----"
+            pwd 
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
