--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -351,16 +351,30 @@ jobs:
             cd backend
             npm install
             npm run build
-            echo "-----Current Working Directory-----"
-            pwd 
+
+            printf "=%.0s"  $(seq 1 70)
+            pwd
+            ls -hlR
+            printf "=%.0s"  $(seq 1 70)
+
             cd ..
-            echo "-----Current Working Directory after cd ..-----"
-            pwd 
+
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
+
+            # handle artifact location
+            printf "=%.0s"  $(seq 1 70)
+            pwd
+            printf "=%.0s"  $(seq 1 70)
+
+            mkdir .circleci/ansible/roles/deploy/files/
+            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/
+
+            printf "=%.0s"  $(seq 1 70)
+            ls -hlR
+            printf "=%.0s"  $(seq 1 70)
+
             cd .circleci/ansible
-            echo "-----Current Working Directory after cd .circleci/ansible-----"
-            pwd 
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
