--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,6 +218,7 @@ jobs:
             apk add --update --no-cache ansible
             apk add --update --no-cache aws-cli 
             pip install awscli
+            apk add --update --no-cache curl
       - run:
           name: Configure server
           command: |
@@ -247,8 +248,6 @@ jobs:
 
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   run-migrations:
