--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -511,12 +511,22 @@ jobs:
           name: Update cloudfront distribution
           command: |
             # your code here
+            # Get previous workflow ID
+            export PrevWorkflowID=$(aws cloudformation \
+            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            echo $PrevWorkflowID >> PrevWorkflowID.txt
+            cat ~/PrevWorkflowID.txt
+
             # Change the initial stack name, as applicable to you
             aws cloudformation deploy \
                     --template-file .circleci/files/cloudfront.yml \
-                    --stack-name InitialStack \
+                    --stack-name InitialStack-${PrevWorkflowID} \
                     --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
                     --tags project=udapeople
+
+            echo PrevWorkflowID: "${PrevWorkflowID}"
+            echo CurrentWorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
